# netpanzer-svn

branches/netpanzer-0.8/: BUGS  ChangeLog  Jamfile  Jamrules  README  RELNOTES  autogen.sh  configure.ac
branches/netpanzer-0.8/cache/: Jamfile
branches/netpanzer-0.8/cache/colorfilters/netp/: 4060.tbl  DarkenALot.tbl
branches/netpanzer-0.8/cache/colorfilters/netpmenu/: DarkenALot.tbl
branches/netpanzer-0.8/docs/: Jamfile
branches/netpanzer-0.8/fonts/: Jamfile
branches/netpanzer-0.8/maps/: Jamfile
branches/netpanzer-0.8/mk/autoconf/: installdirs.m4
branches/netpanzer-0.8/src/Lib/: Jamfile
branches/netpanzer-0.8/src/Lib/2D/: Color.cpp  Color.hpp  Surface.cpp  (+1 more)
branches/netpanzer-0.8/support/win32/: netpanzer.iss
branches/netpanzer-0.8/units/: Jamfile
branches/netpanzer-0.8/units/profiles/: Archer.pfl  Bobcat.pfl  Drake.pfl  Manta.pfl  Scout.pfl  Titan.pfl  Wolf.pfl
branches/netpanzer-0.8/wads/: Jamfile
trunk/masterserver/: .cvsignore  BUGS  Makefile.am  README  TODO  autogen.sh  configure  configure.ac  masterserver.cfg.sample
trunk/masterserver/docs/: protocol.txt
trunk/masterserver/exampleclient/: .cvsignore  main.cpp
trunk/masterserver/src/: .cvsignore  Config.cpp  Config.hpp  HeartbeatThread.cpp  HeartbeatThread.hpp  Log.cpp  Log.hpp  Makefile.am  MasterServer.cpp  MasterServer.hpp  RequestThread.cpp  RequestThread.hpp  ServerInfo.hpp  SocketStream.hpp  Tokenizer.hpp  main.cpp
trunk/masterserver/src/iniparser/: Section.cpp  Section.hpp  Store.cpp
trunk/netpanzer/: .cvsignore  BUGS  ChangeLog  Jamconfig.in  Jamfile  Jamrules  Makefile.am  NetPanzer-windows.cbp  NetPanzer.cbp  README  RELNOTES  SConstruct  TODO  autogen.sh  config-windows.h  config.mak.in  configure.ac  crossmingw.py  cvpak.bat  linuxunzip  make-linux-binary.sh  make-windows-binary.sh  makerelease.sh  netpanzer.desktop  netpanzer.xpm
trunk/netpanzer/Languages/: de.po  fr.po  it.po  netPanzer.pot
trunk/netpanzer/cache/filters/: blend_4060.tbl  blend_darkenalittle.tbl  full_alpha16.tbl
trunk/netpanzer/data/: colordef.json  resources.json
trunk/netpanzer/docs/: Jamfile  netpanzer.6  netpanzerbrowser.6  serverhowto.html  tipofday.txt
trunk/netpanzer/docs/docbook/: serverhowto.xml
trunk/netpanzer/fonts/: fixed10.pcf
trunk/netpanzer/maps/: Bad Neuburg.opt  Bullet Hole.json  Cramped.json  Cramped.spn  Crop Circles.json  Crop Circles.opt  Crop Circles.spn  Duell.opt  Heroes.json  Hill 221.json  Hurry up.json  Jamfile  Open War.json  Open War.opt  Open War.spn  Road to Abitos.json  Six Approaches.opt  The Pit.json  The Valley (mod).json  The Valley.opt  Tight Quarters.json  Tight Quarters.opt  Wall.json  Wild Hunt.json
trunk/netpanzer/mk/autoconf/: ax_type_socklen_t.m4  initjamfile.m4
trunk/netpanzer/mk/jam/: application.jam  build.jam  help.jam  helper.jam  install.jam  library.jam  macosx.jam  objects.jam  package.jam  subdir.jam  unix.jam  win32.jam
trunk/netpanzer/nbproject/: Makefile-impl.mk  Makefile-mac-debug.mk  Makefile-mac-release.mk  Makefile-win-debug.mk  Makefile-win-release.mk  Package-mac-debug.bash  Package-mac-release.bash  Package-win-debug.bash  Package-win-release.bash  configurations.xml  project.xml
trunk/netpanzer/netpanzer/: SConstruct
trunk/netpanzer/pics/: Jamfile  chars8x8.raw
trunk/netpanzer/powerups/: Jamfile
trunk/netpanzer/scripts/: Jamfile  initcolors.lua  initialize.lua  particles.lcfg  servercommands.lua  usercommands.lua
trunk/netpanzer/sound/: Jamfile
trunk/netpanzer/src/: .cvsignore  ChangeLog  Jamfile  Makefile  Makefile.am  TODO  config.h  configure
trunk/netpanzer/src/Bot/: Bot.cpp  Bot.hpp  BotPlayer.cpp  BotPlayer.hpp  BotTaskList.cpp
trunk/netpanzer/src/Editor/: Editor.cpp  Editor.hpp  ImageListView.cpp  ImageListView.hpp  ImageViewer.cpp  Jamfile  MapEditor.cpp  MapEditor.hpp  MapRenderer.cpp  MapRenderer.hpp  MapView.cpp  MapView.hpp  SDLView.cpp  SDLView.hpp  TemplateCreator.cpp  TemplateCreator.hpp  TemplateSelectWidget.cpp  TemplateSelectWidget.hpp  TileSet.cpp  TileSet.hpp  TileSetEditor.cpp  TileSetEditor.hpp  TileSetList.cpp  TileSetList.hpp  TileSetView.cpp  TileSetView.hpp  TileTemplate.cpp  TileTemplate.hpp  main.cpp
trunk/netpanzer/src/Lib/: Exception.cpp  Exception.hpp  FileSystem.cpp  FileSystem.hpp  FileUtil.cpp  FileUtil.hpp  FindFirst.cpp  FindFirst.hpp  Jamfile  LibView.cpp  LibView.hpp  List.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  NoCopy.hpp  Physics.cpp  Physics.hpp  SplitPath.cpp  SplitPath.hpp  Stdafx.hpp  Util.hpp  cGrowList.hpp  cMouse.cpp  cMouse.hpp  cSafeString.cpp  cTimeStamp.cpp  cTimeStamp.hpp  codewiz.hpp  loadSaveData.cpp  loadSaveData.hpp  log.cpp  terminate.cpp
trunk/netpanzer/src/NetPanzer/: Jamfile
trunk/netpanzer/src/ServerBrowser/: BrowserConfig.hpp  Jamfile  Main.cpp  ServerList.cpp  ServerList.hpp
trunk/netpanzer/src/Stub/: DPlayError.hpp  DSound.hpp  DirectDraw.hpp  DirectDrawGlobals.hpp  DirectDrawPalette.hpp  DirectInput.hpp  DirectPlay.h  GameTemplateView.hpp  README  Win32Console.hpp  Win32Mouse.hpp  WinSockClientList.h  WinTimer.hpp  WinsockClient.h
trunk/netpanzer/src/UILib/: DummySound.cpp  DummySound.hpp  Sound.cpp  Sound.hpp  UIDraw.cpp  UIDraw.hpp
trunk/netpanzer/src/Win32/: Win32Console.cpp  Win32Console.hpp  Win32Mouse.cpp  Win32Mouse.hpp  WinTimer.cpp  WinTimer.hpp  gapp.cpp  gapp.hpp
trunk/netpanzer/support/icon/: npicon.rc
trunk/netpanzer/support/loki/: setup.xml
trunk/netpanzer/support/macosx/: make_appbundle.sh
trunk/netpanzer/support/scripts/: copy_datafiles.sh  make-all-binary.sh  make-linux-binary.sh  make-windows-binary.sh
trunk/netpanzer/support/tools/: bmp2pak.cpp  fontdatagen.cpp  pak2bmp.cpp  pak2png.cpp
trunk/netpanzer/support/win32/: netpanzer.iss
trunk/netpanzer/tilesets/: summer12mb.tls
trunk/netpanzer/units/: Jamfile
trunk/netpanzer/units/profiles/: Archer.pfl  Archer.upf  Bear.pfl  Bear.upf  Bobcat.pfl  Drake.pfl  Drake.upf  Manta.pfl  Panther1.pfl  Panther1.upf  SPanzer.pfl  Scout.pfl  Spanzer.upf  Stinger.pfl  Stinger.upf  Titan.pfl  Wolf.pfl  Wolf.upf
trunk/netpanzer/wads/: netpskip.act  pyrologo.act
(+2834 files in other folders)
