AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = netpanzer

netpanzer_CPPFLAGS = -ILib/2D \
    -IBot \
    -ILib/View \
    -ILib \
    -ILib/Interfaces \
    -ILib/PObject/Classes \
    -ILib/PObject/Templates \
    -ILib/Particles \
    -ILib/Types \
    -ILib/optionmm \
    -ILib/Xml \
    -INetPanzer/Classes/AI \
    -INetPanzer/Classes \
    -INetPanzer/Classes/Network \
    -INetPanzer/Classes/Units \
    -INetPanzer/Classes/Weapons \
    -INetPanzer/Core \
    -INetPanzer/Interfaces/unix \
    -INetPanzer/Interfaces \
    -INetPanzer/Port \
    -INetPanzer/Structs \
    -INetPanzer/Views/Game \
    -INetPanzer/Views \
    -INetPanzer/Views/MainMenu/Multi \
    -INetPanzer/Views/MainMenu \
    -INetPanzer/Views/MainMenu/Options \
    -IUILib/Network \
    -IUILib \
    -IUILib/SDL
netpanzer_CXXFLAGS = $(XML_CFLAGS) $(SDL_CFLAGS) $(SDLNET_CFLAGS) \
		     $(SDLMIXER_CFLAGS) $(SDLIMAGE_CFLAGS) $(PHYSFS_CFLAGS)
netpanzer_LDFLAGS = $(XML_LIBS) $(SDL_LIBS) $(SDLNET_LIBS) $(SDLMIXER_LIBS) \
		  $(SDLIMAGE_LIBS) $(PHYSFS_LIBS)
netpanzer_SOURCES = \
    Bot/Bot.cpp \
    Bot/Bot.hpp \
    Bot/BotPlayer.cpp \
    Bot/BotPlayer.hpp \
    Bot/BotTask.hpp \
    Bot/BotTaskList.cpp \
    Bot/BotTaskList.hpp \
    Lib/2D/Color.cpp \
    Lib/2D/Color.hpp \
    Lib/2D/ColorTable.cpp \
    Lib/2D/ColorTable.hpp \
    Lib/2D/DigitText.cpp \
    Lib/2D/DigitText.hpp \
    Lib/2D/FontSystem2D.cpp \
    Lib/2D/FontSystem2D.hpp \
    Lib/2D/PackedSurface.cpp \
    Lib/2D/PackedSurface.hpp \
    Lib/2D/Palette.cpp \
    Lib/2D/Palette.hpp \
    Lib/2D/RGBColor.cpp \
    Lib/2D/RGBColor.hpp \
    Lib/2D/Span.cpp \
    Lib/2D/Span.hpp \
    Lib/2D/Surface.cpp \
    Lib/2D/Surface.hpp \
    Lib/View/AbstractButton.cpp \
    Lib/View/AbstractButton.hpp \
    Lib/View/Button.cpp \
    Lib/View/Button.hpp \
    Lib/View/CheckBox.cpp \
    Lib/View/CheckBox.hpp \
    Lib/View/Choice.cpp \
    Lib/View/Choice.hpp \
    Lib/View/Component.cpp \
    Lib/View/Component.hpp \
    Lib/View/Desktop.cpp \
    Lib/View/Desktop.hpp \
    Lib/View/Icon.cpp \
    Lib/View/Icon.hpp \
    Lib/View/InputEvent.hpp \
    Lib/View/Label.cpp \
    Lib/View/Label.hpp \
    Lib/View/MouseEvent.hpp \
    Lib/View/ScrollBar.cpp \
    Lib/View/ScrollBar.hpp \
    Lib/View/StateChangedCallback.hpp \
    Lib/View/String.cpp \
    Lib/View/String.hpp \
    Lib/View/TextArea.cpp \
    Lib/View/TextArea.hpp \
    Lib/View/TextComponent.cpp \
    Lib/View/TextComponent.hpp \
    Lib/View/TextField.cpp \
    Lib/View/TextField.hpp \
    Lib/View/View.cpp \
    Lib/View/View.hpp \
    Lib/View/ViewGlobals.cpp \
    Lib/View/ViewGlobals.hpp \
    Lib/View/cButton.cpp \
    Lib/View/cButton.hpp \
    Lib/View/cInputField.cpp \
    Lib/View/cInputField.hpp \
    Lib/Exception.cpp \
    Lib/Exception.hpp \
    Lib/FileSystem.cpp \
    Lib/FileSystem.hpp \
    Lib/FindFirst.cpp \
    Lib/FindFirst.hpp \
    Lib/LibView.cpp \
    Lib/LibView.hpp \
    Lib/Log.cpp \
    Lib/Log.hpp \
    Lib/Math.cpp \
    Lib/Math.hpp \
    Lib/NoCopy.hpp \
    Lib/Physics.cpp \
    Lib/Physics.hpp \
    Lib/SplitPath.cpp \
    Lib/SplitPath.hpp \
    Lib/cGrowList.hpp \
    Lib/cMouse.cpp \
    Lib/cMouse.hpp \
    Lib/cTimeStamp.cpp \
    Lib/cTimeStamp.hpp \
    Lib/codewiz.hpp \
    Lib/Interfaces/TimerInterface.cpp \
    Lib/Interfaces/TimerInterface.hpp \
    Lib/Interfaces/UtilInterface.cpp \
    Lib/Interfaces/UtilInterface.hpp \
    Lib/PObject/Classes/Angle.cpp \
    Lib/PObject/Classes/Angle.hpp \
    Lib/PObject/Classes/BitArray.cpp \
    Lib/PObject/Classes/BitArray.hpp \
    Lib/PObject/Classes/BoundBox.cpp \
    Lib/PObject/Classes/BoundBox.hpp \
    Lib/PObject/Classes/BresenhamLine.cpp \
    Lib/PObject/Classes/BresenhamLine.hpp \
    Lib/PObject/Classes/FileList.cpp \
    Lib/PObject/Classes/FileList.hpp \
    Lib/PObject/Classes/PArray.cpp \
    Lib/PObject/Classes/PArray.hpp \
    Lib/PObject/Classes/Timer.cpp \
    Lib/PObject/Classes/Timer.hpp \
    Lib/PObject/Templates/ArrayGrowableTemplate.hpp \
    Lib/PObject/Templates/ArrayTemplate.hpp \
    Lib/PObject/Templates/BucketArrayTemplate.hpp \
    Lib/PObject/Templates/LinkListDoubleTemplate.hpp \
    Lib/PObject/Templates/LinkListSingleTemplate.hpp \
    Lib/PObject/Templates/QueueTemplate.hpp \
    Lib/Particles/ChunkTrajectoryParticle2D.cpp \
    Lib/Particles/ChunkTrajectoryParticle2D.hpp \
    Lib/Particles/CloudParticle2D.cpp \
    Lib/Particles/CloudParticle2D.hpp \
    Lib/Particles/CraterParticle2D.cpp \
    Lib/Particles/CraterParticle2D.hpp \
    Lib/Particles/DirtKickParticle2D.cpp \
    Lib/Particles/DirtKickParticle2D.hpp \
    Lib/Particles/ExplosionFlashParticle2D.hpp \
    Lib/Particles/FireParticle2D.cpp \
    Lib/Particles/FireParticle2D.hpp \
    Lib/Particles/FireParticleSystem2D.cpp \
    Lib/Particles/FireParticleSystem2D.hpp \
    Lib/Particles/FlameParticle2D.cpp \
    Lib/Particles/FlameParticle2D.hpp \
    Lib/Particles/FlashParticle2D.cpp \
    Lib/Particles/FlashParticle2D.hpp \
    Lib/Particles/GroundExplosionParticle2D.cpp \
    Lib/Particles/GroundExplosionParticle2D.hpp \
    Lib/Particles/GroundExplosionParticleSystem2D.cpp \
    Lib/Particles/GroundExplosionParticleSystem2D.hpp \
    Lib/Particles/MovementDirtPuffParticle2D.hpp \
    Lib/Particles/Particle2D.cpp \
    Lib/Particles/Particle2D.hpp \
    Lib/Particles/ParticleInterface.cpp \
    Lib/Particles/ParticleInterface.hpp \
    Lib/Particles/ParticleSystem2D.cpp \
    Lib/Particles/ParticleSystem2D.hpp \
    Lib/Particles/ParticleSystemGlobals.cpp \
    Lib/Particles/ParticleSystemGlobals.hpp \
    Lib/Particles/ParticleTweakView.cpp \
    Lib/Particles/ParticleTweakView.hpp \
    Lib/Particles/PuffParticle2D.cpp \
    Lib/Particles/PuffParticle2D.hpp \
    Lib/Particles/RadarPingParticle2D.cpp \
    Lib/Particles/RadarPingParticle2D.hpp \
    Lib/Particles/SmokingTrajectoryParticle2D.cpp \
    Lib/Particles/SmokingTrajectoryParticle2D.hpp \
    Lib/Particles/SmolderParticleSystem2D.cpp \
    Lib/Particles/SmolderParticleSystem2D.hpp \
    Lib/Particles/SnowParticle2D.cpp \
    Lib/Particles/SnowParticle2D.hpp \
    Lib/Particles/SnowParticleSystem2D.cpp \
    Lib/Particles/SnowParticleSystem2D.hpp \
    Lib/Particles/SparkParticle2D.cpp \
    Lib/Particles/SparkParticle2D.hpp \
    Lib/Particles/TemplateExplosionSystem.cpp \
    Lib/Particles/TemplateExplosionSystem.hpp \
    Lib/Particles/TemplateMuzzleSystem.cpp \
    Lib/Particles/TemplateMuzzleSystem.hpp \
    Lib/Particles/TrajectoryParticle2D.cpp \
    Lib/Particles/TrajectoryParticle2D.hpp \
    Lib/Particles/VectorPuffParticle2D.cpp \
    Lib/Particles/VectorPuffParticle2D.hpp \
    Lib/Particles/WindParticle2D.cpp \
    Lib/Particles/WindParticle2D.hpp \
    Lib/Types/LibTypes.hpp \
    Lib/Types/fRect.cpp \
    Lib/Types/fRect.hpp \
    Lib/Types/fXY.hpp \
    Lib/Types/fXYZ.cpp \
    Lib/Types/fXYZ.hpp \
    Lib/Types/iRect.cpp \
    Lib/Types/iRect.hpp \
    Lib/Types/iXY.cpp \
    Lib/Types/iXY.hpp \
    Lib/optionmm/option.cpp \
    Lib/optionmm/command_line.cpp \
    Lib/optionmm/command_line.hpp \
    Lib/optionmm/option.hpp \
    Lib/Xml/XmlConfig.cpp \
    Lib/Xml/XmlConfig.hpp \
    Lib/Xml/XmlParser.hpp \
    Lib/Xml/XmlParser.cpp \
    Lib/Xml/XmlStore.cpp \
    Lib/Xml/XmlStore.hpp \
    NetPanzer/Classes/AI/Astar.cpp \
    NetPanzer/Classes/AI/Astar.hpp \
    NetPanzer/Classes/AI/PathList.cpp \
    NetPanzer/Classes/AI/PathList.hpp \
    NetPanzer/Classes/AI/PathingState.cpp \
    NetPanzer/Classes/AI/PathingState.hpp \
    NetPanzer/Classes/BonusUnitPowerUp.cpp \
    NetPanzer/Classes/BonusUnitPowerUp.hpp \
    NetPanzer/Classes/DDHardSurface.cpp \
    NetPanzer/Classes/DDHardSurface.hpp \
    NetPanzer/Classes/EnemyRadarPowerUp.cpp \
    NetPanzer/Classes/EnemyRadarPowerUp.hpp \
    NetPanzer/Classes/InternalLink.hpp \
    NetPanzer/Classes/Objective.cpp \
    NetPanzer/Classes/Objective.hpp \
    NetPanzer/Classes/ObjectiveMessageTypes.hpp \
    NetPanzer/Classes/Outpost.cpp \
    NetPanzer/Classes/Outpost.hpp \
    NetPanzer/Classes/PlacementMatrix.cpp \
    NetPanzer/Classes/PlacementMatrix.hpp \
    NetPanzer/Classes/PlayerID.cpp \
    NetPanzer/Classes/PlayerID.hpp \
    NetPanzer/Classes/PlayerState.cpp \
    NetPanzer/Classes/PlayerState.hpp \
    NetPanzer/Classes/PlayerUnitConfig.cpp \
    NetPanzer/Classes/PlayerUnitConfig.hpp \
    NetPanzer/Classes/PowerUp.cpp \
    NetPanzer/Classes/PowerUp.hpp \
    NetPanzer/Classes/Projectile.cpp \
    NetPanzer/Classes/Projectile.hpp \
    NetPanzer/Classes/SelectionBoxSprite.cpp \
    NetPanzer/Classes/SelectionBoxSprite.hpp \
    NetPanzer/Classes/SelectionList.cpp \
    NetPanzer/Classes/SelectionList.hpp \
    NetPanzer/Classes/SpawnList.cpp \
    NetPanzer/Classes/SpawnList.hpp \
    NetPanzer/Classes/Sprite.cpp \
    NetPanzer/Classes/Sprite.hpp \
    NetPanzer/Classes/SpriteSorter.cpp \
    NetPanzer/Classes/SpriteSorter.hpp \
    NetPanzer/Classes/SurfaceDesc.hpp \
    NetPanzer/Classes/TileEngine.cpp \
    NetPanzer/Classes/TileEngine.hpp \
    NetPanzer/Classes/TileSet.cpp \
    NetPanzer/Classes/TileSet.hpp \
    NetPanzer/Classes/Unit.cpp \
    NetPanzer/Classes/Unit.hpp \
    NetPanzer/Classes/UnitBase.hpp \
    NetPanzer/Classes/UnitBlackBoard.cpp \
    NetPanzer/Classes/UnitBlackBoard.hpp \
    NetPanzer/Classes/UnitBucketArray.cpp \
    NetPanzer/Classes/UnitBucketArray.hpp \
    NetPanzer/Classes/UnitID.hpp \
    NetPanzer/Classes/UnitIDList.hpp \
    NetPanzer/Classes/UnitLifecycles.hpp \
    NetPanzer/Classes/UnitList.cpp \
    NetPanzer/Classes/UnitList.hpp \
    NetPanzer/Classes/UnitMessage.cpp \
    NetPanzer/Classes/UnitMessage.hpp \
    NetPanzer/Classes/UnitMessageTypes.hpp \
    NetPanzer/Classes/UnitOpcodeEncoder.cpp \
    NetPanzer/Classes/UnitOpcodeEncoder.hpp \
    NetPanzer/Classes/UnitOpcodes.hpp \
    NetPanzer/Classes/UnitPowerUp.cpp \
    NetPanzer/Classes/UnitPowerUp.hpp \
    NetPanzer/Classes/UnitState.cpp \
    NetPanzer/Classes/UnitState.hpp \
    NetPanzer/Classes/ViewCamera.cpp \
    NetPanzer/Classes/ViewCamera.hpp \
    NetPanzer/Classes/WadMapTable.hpp \
    NetPanzer/Classes/WorldInputCmdProcessor.cpp \
    NetPanzer/Classes/WorldInputCmdProcessor.hpp \
    NetPanzer/Classes/WorldMap.cpp \
    NetPanzer/Classes/WorldMap.hpp \
    NetPanzer/Classes/Network/ClientConnectDaemon.cpp \
    NetPanzer/Classes/Network/ClientConnectDaemon.hpp \
    NetPanzer/Classes/Network/ClientMessageRouter.cpp \
    NetPanzer/Classes/Network/ClientMessageRouter.hpp \
    NetPanzer/Classes/Network/ClientServerNetMessage.hpp \
    NetPanzer/Classes/Network/ConnectNetMessage.hpp \
    NetPanzer/Classes/Network/GameControlNetMessage.hpp \
    NetPanzer/Classes/Network/NetMessageEncoder.cpp \
    NetPanzer/Classes/Network/NetMessageEncoder.hpp \
    NetPanzer/Classes/Network/NetMessageEnums.hpp \
    NetPanzer/Classes/Network/NetPacket.hpp \
    NetPanzer/Classes/Network/NetPacketQueues.cpp \
    NetPanzer/Classes/Network/NetPacketQueues.hpp \
    NetPanzer/Classes/Network/NetworkClient.cpp \
    NetPanzer/Classes/Network/NetworkClient.hpp \
    NetPanzer/Classes/Network/NetworkInterface.cpp \
    NetPanzer/Classes/Network/NetworkInterface.hpp \
    NetPanzer/Classes/Network/NetworkReturnCodes.hpp \
    NetPanzer/Classes/Network/NetworkServer.cpp \
    NetPanzer/Classes/Network/NetworkServer.hpp \
    NetPanzer/Classes/Network/NetworkState.cpp \
    NetPanzer/Classes/Network/NetworkState.hpp \
    NetPanzer/Classes/Network/ObjectiveNetMessage.hpp \
    NetPanzer/Classes/Network/PlayerNetMessage.hpp \
    NetPanzer/Classes/Network/PowerUpNetMessage.hpp \
    NetPanzer/Classes/Network/ServerConnectDaemon.cpp \
    NetPanzer/Classes/Network/ServerConnectDaemon.hpp \
    NetPanzer/Classes/Network/ServerMessageRouter.cpp \
    NetPanzer/Classes/Network/ServerMessageRouter.hpp \
    NetPanzer/Classes/Network/SystemNetMessage.hpp \
    NetPanzer/Classes/Network/TerminalNetMesg.hpp \
    NetPanzer/Classes/Network/UnitNetMessage.cpp \
    NetPanzer/Classes/Network/UnitNetMessage.hpp \
    NetPanzer/Classes/Units/Abrams.cpp \
    NetPanzer/Classes/Units/Abrams.hpp \
    NetPanzer/Classes/Units/Archer.cpp \
    NetPanzer/Classes/Units/Archer.hpp \
    NetPanzer/Classes/Units/Hammerhead.cpp \
    NetPanzer/Classes/Units/Hammerhead.hpp \
    NetPanzer/Classes/Units/Humvee.cpp \
    NetPanzer/Classes/Units/Humvee.hpp \
    NetPanzer/Classes/Units/Leopard.cpp \
    NetPanzer/Classes/Units/Leopard.hpp \
    NetPanzer/Classes/Units/Lynx.cpp \
    NetPanzer/Classes/Units/Lynx.hpp \
    NetPanzer/Classes/Units/M109.cpp \
    NetPanzer/Classes/Units/M109.hpp \
    NetPanzer/Classes/Units/Scorpion.cpp \
    NetPanzer/Classes/Units/Scorpion.hpp \
    NetPanzer/Classes/Units/SpahPanzer.cpp \
    NetPanzer/Classes/Units/SpahPanzer.hpp \
    NetPanzer/Classes/Units/UnitGlobals.cpp \
    NetPanzer/Classes/Units/UnitGlobals.hpp \
    NetPanzer/Classes/Units/Valentine.cpp \
    NetPanzer/Classes/Units/Valentine.hpp \
    NetPanzer/Classes/Units/Vehicle.cpp \
    NetPanzer/Classes/Units/Vehicle.hpp \
    NetPanzer/Classes/Weapons/BulletWeapon.cpp \
    NetPanzer/Classes/Weapons/BulletWeapon.hpp \
    NetPanzer/Classes/Weapons/MissleWeapon.cpp \
    NetPanzer/Classes/Weapons/MissleWeapon.hpp \
    NetPanzer/Classes/Weapons/ShellWeapon.cpp \
    NetPanzer/Classes/Weapons/ShellWeapon.hpp \
    NetPanzer/Classes/Weapons/Weapon.cpp \
    NetPanzer/Classes/Weapons/Weapon.hpp \
    NetPanzer/Classes/Weapons/WeaponGlobals.cpp \
    NetPanzer/Classes/Weapons/WeaponGlobals.hpp \
    NetPanzer/Core/NetworkGlobals.cpp \
    NetPanzer/Core/NetworkGlobals.hpp \
    NetPanzer/Core/loadPics.cpp \
    NetPanzer/Core/loadPics.hpp \
    NetPanzer/Core/main.cpp \
    NetPanzer/Interfaces/unix/NetworkClientUnix.cpp \
    NetPanzer/Interfaces/unix/NetworkClientUnix.hpp \
    NetPanzer/Interfaces/unix/NetworkServerUnix.cpp \
    NetPanzer/Interfaces/unix/NetworkServerUnix.hpp \
    NetPanzer/Interfaces/ChatInterface.cpp \
    NetPanzer/Interfaces/ChatInterface.hpp \
    NetPanzer/Interfaces/Client.cpp \
    NetPanzer/Interfaces/Client.hpp \
    NetPanzer/Interfaces/ConsoleInterface.cpp \
    NetPanzer/Interfaces/ConsoleInterface.hpp \
    NetPanzer/Interfaces/GameConfig.cpp \
    NetPanzer/Interfaces/GameConfig.hpp \
    NetPanzer/Interfaces/GameControlRulesDaemon.cpp \
    NetPanzer/Interfaces/GameControlRulesDaemon.hpp \
    NetPanzer/Interfaces/GameManager.cpp \
    NetPanzer/Interfaces/GameManager.hpp \
    NetPanzer/Interfaces/KeyboardInterface.cpp \
    NetPanzer/Interfaces/KeyboardInterface.hpp \
    NetPanzer/Interfaces/MapInterface.cpp \
    NetPanzer/Interfaces/MapInterface.hpp \
    NetPanzer/Interfaces/MapsManager.cpp \
    NetPanzer/Interfaces/MapsManager.hpp \
    NetPanzer/Interfaces/MiniMapInterface.cpp \
    NetPanzer/Interfaces/MiniMapInterface.hpp \
    NetPanzer/Interfaces/MouseInterface.cpp \
    NetPanzer/Interfaces/MouseInterface.hpp \
    NetPanzer/Interfaces/ObjectiveInterface.cpp \
    NetPanzer/Interfaces/ObjectiveInterface.hpp \
    NetPanzer/Interfaces/PathScheduler.cpp \
    NetPanzer/Interfaces/PathScheduler.hpp \
    NetPanzer/Interfaces/PlayerInterface.cpp \
    NetPanzer/Interfaces/PlayerInterface.hpp \
    NetPanzer/Interfaces/PowerUpInterface.cpp \
    NetPanzer/Interfaces/PowerUpInterface.hpp \
    NetPanzer/Interfaces/ProjectileInterface.cpp \
    NetPanzer/Interfaces/ProjectileInterface.hpp \
    NetPanzer/Interfaces/Server.cpp \
    NetPanzer/Interfaces/Server.hpp \
    NetPanzer/Interfaces/Stats.cpp \
    NetPanzer/Interfaces/Stats.hpp \
    NetPanzer/Interfaces/TileInterface.cpp \
    NetPanzer/Interfaces/TileInterface.hpp \
    NetPanzer/Interfaces/UnitInterface.cpp \
    NetPanzer/Interfaces/UnitInterface.hpp \
    NetPanzer/Interfaces/UnitProfileInterface.cpp \
    NetPanzer/Interfaces/UnitProfileInterface.hpp \
    NetPanzer/Interfaces/WorldViewInterface.cpp \
    NetPanzer/Interfaces/WorldViewInterface.hpp \
    NetPanzer/Port/Gdatstct.cpp \
    NetPanzer/Port/Gdatstct.hpp \
    NetPanzer/Port/MapData.hpp \
    NetPanzer/Port/blitters.cpp \
    NetPanzer/Structs/KeyActionEnum.hpp \
    NetPanzer/Structs/MapFileStruct.hpp \
    NetPanzer/Structs/TileSetStruct.hpp \
    NetPanzer/Structs/UnitTypes.hpp \
    NetPanzer/Views/Game/AreYouSureExitView.cpp \
    NetPanzer/Views/Game/AreYouSureExitView.hpp \
    NetPanzer/Views/Game/AreYouSureResignView.cpp \
    NetPanzer/Views/Game/AreYouSureResignView.hpp \
    NetPanzer/Views/Game/ChatView.cpp \
    NetPanzer/Views/Game/ChatView.hpp \
    NetPanzer/Views/Game/CodeStatsView.cpp \
    NetPanzer/Views/Game/CodeStatsView.hpp \
    NetPanzer/Views/Game/ControlPaletteView.cpp \
    NetPanzer/Views/Game/ControlPaletteView.hpp \
    NetPanzer/Views/Game/ControlView.cpp \
    NetPanzer/Views/Game/ControlView.hpp \
    NetPanzer/Views/Game/GameInfoView.cpp \
    NetPanzer/Views/Game/GameInfoView.hpp \
    NetPanzer/Views/Game/GameTemplateView.cpp \
    NetPanzer/Views/Game/GameTemplateView.hpp \
    NetPanzer/Views/Game/GameToolbarView.cpp \
    NetPanzer/Views/Game/GameToolbarView.hpp \
    NetPanzer/Views/Game/GameView.cpp \
    NetPanzer/Views/Game/GameView.hpp \
    NetPanzer/Views/Game/HelpScrollView.cpp \
    NetPanzer/Views/Game/HelpScrollView.hpp \
    NetPanzer/Views/Game/LobbyView.cpp \
    NetPanzer/Views/Game/LobbyView.hpp \
    NetPanzer/Views/Game/MiniMapOptionsView.cpp \
    NetPanzer/Views/Game/MiniMapOptionsView.hpp \
    NetPanzer/Views/Game/MiniMapView.cpp \
    NetPanzer/Views/Game/MiniMapView.hpp \
    NetPanzer/Views/Game/MiniRankView.cpp \
    NetPanzer/Views/Game/MiniRankView.hpp \
    NetPanzer/Views/Game/ProgressView.cpp \
    NetPanzer/Views/Game/ProgressView.hpp \
    NetPanzer/Views/Game/RankView.cpp \
    NetPanzer/Views/Game/RankView.hpp \
    NetPanzer/Views/Game/ResignView.cpp \
    NetPanzer/Views/Game/ResignView.hpp \
    NetPanzer/Views/Game/VehicleSelectionView.cpp \
    NetPanzer/Views/Game/VehicleSelectionView.hpp \
    NetPanzer/Views/Game/WinnerMesgView.cpp \
    NetPanzer/Views/Game/WinnerMesgView.hpp \
    NetPanzer/Views/Game/oldCodeStatsView.cpp \
    NetPanzer/Views/Game/oldCodeStatsView.hpp \
    NetPanzer/Views/GameViewGlobals.cpp \
    NetPanzer/Views/GameViewGlobals.hpp \
    NetPanzer/Views/MainMenu/Multi/DirectPlayErrorExceptionView.cpp \
    NetPanzer/Views/MainMenu/Multi/DirectPlayErrorExceptionView.hpp \
    NetPanzer/Views/MainMenu/Multi/FlagSelectionView.cpp \
    NetPanzer/Views/MainMenu/Multi/FlagSelectionView.hpp \
    NetPanzer/Views/MainMenu/Multi/GetSessionHostView.cpp \
    NetPanzer/Views/MainMenu/Multi/GetSessionHostView.hpp \
    NetPanzer/Views/MainMenu/Multi/GetSessionView.cpp \
    NetPanzer/Views/MainMenu/Multi/GetSessionView.hpp \
    NetPanzer/Views/MainMenu/Multi/HostJoinTemplateView.cpp \
    NetPanzer/Views/MainMenu/Multi/HostJoinTemplateView.hpp \
    NetPanzer/Views/MainMenu/Multi/HostOptionsView.cpp \
    NetPanzer/Views/MainMenu/Multi/HostOptionsView.hpp \
    NetPanzer/Views/MainMenu/Multi/HostView.cpp \
    NetPanzer/Views/MainMenu/Multi/HostView.hpp \
    NetPanzer/Views/MainMenu/Multi/IPAddressView.cpp \
    NetPanzer/Views/MainMenu/Multi/ImageSelectorView.cpp \
    NetPanzer/Views/MainMenu/Multi/ImageSelectorView.hpp \
    NetPanzer/Views/MainMenu/Multi/JoinView.cpp \
    NetPanzer/Views/MainMenu/Multi/JoinView.hpp \
    NetPanzer/Views/MainMenu/Multi/MapSelectionView.cpp \
    NetPanzer/Views/MainMenu/Multi/MapSelectionView.hpp \
    NetPanzer/Views/MainMenu/Multi/MultiMapSelectorView.cpp \
    NetPanzer/Views/MainMenu/Multi/MultiMapSelectorView.hpp \
    NetPanzer/Views/MainMenu/Multi/MultiVehicleSelectorView.cpp \
    NetPanzer/Views/MainMenu/Multi/MultiVehicleSelectorView.hpp \
    NetPanzer/Views/MainMenu/Multi/PlayerNameView.cpp \
    NetPanzer/Views/MainMenu/Multi/PlayerNameView.hpp \
    NetPanzer/Views/MainMenu/Multi/UnitColorView.cpp \
    NetPanzer/Views/MainMenu/Multi/UnitColorView.hpp \
    NetPanzer/Views/MainMenu/Multi/UnitSelectionView.cpp \
    NetPanzer/Views/MainMenu/Multi/UnitSelectionView.hpp \
    NetPanzer/Views/MainMenu/HelpView.cpp \
    NetPanzer/Views/MainMenu/HelpView.hpp \
    NetPanzer/Views/MainMenu/MainMenuView.cpp \
    NetPanzer/Views/MainMenu/MainMenuView.hpp \
    NetPanzer/Views/MainMenu/MenuTemplateView.cpp \
    NetPanzer/Views/MainMenu/MenuTemplateView.hpp \
    NetPanzer/Views/MainMenu/OptionsTemplateView.cpp \
    NetPanzer/Views/MainMenu/OptionsTemplateView.hpp \
    NetPanzer/Views/MainMenu/OrderingView.cpp \
    NetPanzer/Views/MainMenu/OrderingView.hpp \
    NetPanzer/Views/MainMenu/RMouseHackView.cpp \
    NetPanzer/Views/MainMenu/RMouseHackView.hpp \
    NetPanzer/Views/MainMenu/SkirmishView.cpp \
    NetPanzer/Views/MainMenu/SkirmishView.hpp \
    NetPanzer/Views/MainMenu/SpecialButtonView.cpp \
    NetPanzer/Views/MainMenu/SpecialButtonView.hpp \
    NetPanzer/Views/MainMenu/Options/ControlsView.cpp \
    NetPanzer/Views/MainMenu/Options/ControlsView.hpp \
    NetPanzer/Views/MainMenu/Options/InterfaceView.cpp \
    NetPanzer/Views/MainMenu/Options/InterfaceView.hpp \
    NetPanzer/Views/MainMenu/Options/SoundView.cpp \
    NetPanzer/Views/MainMenu/Options/SoundView.hpp \
    NetPanzer/Views/MainMenu/Options/VisualsView.cpp \
    NetPanzer/Views/MainMenu/Options/VisualsView.hpp \
    UILib/Network/SocketClient.cpp \
    UILib/Network/SocketClient.hpp \
    UILib/Network/ClientList.cpp \
    UILib/Network/ClientList.hpp \
    UILib/Network/ClientSocket.cpp \
    UILib/Network/ClientSocket.hpp \
    UILib/Network/ServerSocket.cpp \
    UILib/Network/ServerSocket.hpp \
    UILib/Network/SocketMessage.cpp \
    UILib/Network/SocketMessage.hpp \
    UILib/Network/SDLNet.cpp \
    UILib/Network/SDLNet.hpp \
    UILib/DummySound.cpp \
    UILib/DummySound.hpp \
    UILib/Sound.cpp \
    UILib/Sound.hpp \
    UILib/UIDraw.cpp \
    UILib/UIDraw.hpp \
    UILib/SDL/SDLDraw.cpp \
    UILib/SDL/SDLDraw.hpp \
    UILib/SDL/SDLSound.cpp \
    UILib/SDL/SDLSound.hpp 

